同步于: 9月25日13时2分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,26 +1,26 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
 #### [ 习被夺权传言四起 港媒称二十大军委班子已搭成(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017452.md)
 #### [ 习近平二十大前立威 孙力军被判死缓(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017358.md)
-#### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
-#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 孙力军、傅政华等相继被判重判 分析：背后有天意(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017382.md)
-#### [ 习近平、魏凤和缺席军委重要会议 李桥铭高调现身(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017356.md)
+#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
 #### [ 中共对乌克兰立场诡异转弯？王毅会见乌外长库列巴(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017439.md)
+#### [ 习近平、魏凤和缺席军委重要会议 李桥铭高调现身(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017356.md)
 #### [ 中共二十大已进入关键阶段 习近平三大目标曝光(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/998348.md)
 #### [ 习全面清洗江曾派？二十大前北京连发重磅消息判刑5高官(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017317.md)
 #### [ “头号酷吏”傅政华死缓2年 终身监禁不得减刑假释(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017264.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 二十大召开前 红二代：不少人反对习近平连任(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017214.md)
 #### [ 习近平回国隐身传言四起 大外宣放风其连任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831695.md)
-#### [ 传中共百岁元老宋平罕见露面 谈话遭封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831267.md)
 #### [ 二十大前 习近平震慑政敌力度空前(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017466.md)
+#### [ 传中共百岁元老宋平罕见露面 谈话遭封杀](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831267.md)
 #### [ 中共智库发文否定习近平言论 外界热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656562.md)
-#### [ 48小时内出现多个不寻常 中南海有变故？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656640.md)
 #### [ 【远见快评】习缺席重要军方会 央视镜头泄露啥](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831601.md)
+#### [ 48小时内出现多个不寻常 中南海有变故？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656640.md)
 #### [ 习近平连任有悬念 二十大前可能突发两大事件(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017225.md)
 #### [ 上海传一男子当街杀人 受害女遭割喉浑身喷血 大陆全面封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017431.md)
-#### [ 新华社重磅文章藏什么信号？二十大后将有腥风血雨](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656448.md)
 #### [ 【横河观点】习继续震摄对手 危机重重恐超想像](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831586.md)
+#### [ 新华社重磅文章藏什么信号？二十大后将有腥风血雨](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656448.md)
 #### [ 习近平中亚之行表现异常 被疑未打疫苗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831161.md)
 #### [ 基建狂魔已玩完 中国高铁成最大灰犀牛！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999527.md)
 #### [ 习魏缺席重要军委会议 这一军官出面“叫板”？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656532.md)
@@ -36,9 +36,9 @@
 #### [ 俄前顾问：普京最近决定 是受到习近平影响](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13832024.md)
 #### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 孙力军判死缓 党媒再度发出警告 专家揭背后用意](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656529.md)
-#### [ 中共官媒：俄罗斯大势不妙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535563.md)
 #### [ 中共智库刊文逆习？专家 : 中共意识到判断错误(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017500.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
+#### [ 中共官媒：俄罗斯大势不妙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535563.md)
 #### [ 习近平缺席军方会议 二十大军委换人露端倪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535891.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 谢金河：中国经济衰退成常态 两产业要避险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831239.md)
@@ -50,4 +50,4 @@
 #### [ 孙力军被判死缓！非法持枪 涉刺习谋反？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535793.md)
 #### [ 人权组织联合国大会外喊话：中共滚出联合国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831715.md)
 #### [ 家运大逆转 正信现奇蹟](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656601.md)
-#### [ 普京核武暗示推升局势 在联大遭多国谴责](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13831416.md)
+#### [ “泼墨女”董瑶琼父亲狱中突然死亡 全身有伤](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13832115.md)
