--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -42,12 +42,12 @@
 #### [ 中共官媒：俄罗斯大势不妙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535563.md)
 #### [ 习近平缺席军方会议 二十大军委换人露端倪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535891.md)
 #### [ 谢金河：中国经济衰退成常态 两产业要避险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831239.md)
+#### [ 习近平隐身传言四起 公众号吹捧宋平被封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103536224.md)
 #### [ 隔离收费 舆论哗然 重庆官员：经济很崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831434.md)
 #### [ 布林肯和王毅会面 重点谈台海和平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13831438.md)
-#### [ 习近平隐身传言四起 公众号吹捧宋平被封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103536224.md)
 #### [ 二十大前中共高度紧张 北京高校缩短十一长假](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535963.md)
 #### [ 云南重庆向隔离市民收费 分析：中共没钱了](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13831172.md)
+#### [ 孙力军免死另有玄机？习近平真正目的是这个](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656667.md)
 #### [ “泼墨女”董瑶琼父亲狱中突然死亡 全身有伤](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13832115.md)
 #### [ 章天亮：孙力军也判死缓 习近平神隐 软禁还是憋大招？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/656781.md)
 #### [ 孙力军被判死缓！非法持枪 涉刺习谋反？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103535793.md)
-#### [ 人权组织联合国大会外喊话：中共滚出联合国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13831715.md)
